# kitty-copy-pager

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs  scrollback.rs  selection.rs  settings.rs  utils.rs
src/scrollback/: copy.rs  mod.rs  modes.rs  motions.rs  movement.rs  rendering.rs  search.rs  settings.rs
