[package]
name = "kitty-copy-pager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = [ "osc52" ] }
log = "0.4.29"
regex = "1.12.3"
simplelog = "0.12.2"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.2"
